--- a/example/layout/example1.html.twig
+++ b/example/layout/example1.html.twig
@@ -1,7 +1,9 @@
 
 {% from '@bootstrap/components/cards/vertical_card.html.twig' import news_vertical_card as news_article %}
+{% from '@bootstrap/components/social/share_button.html.twig' import share_button as share %}
+{% import '@bootstrap/macros/media/image.html.twig' as image %}
 {% import '@bootstrap/components/social/login.html.twig' as login %}
-{% import '@bootstrap/components/social/share.html.twig' as share %}
+{% import '@bootstrap/components/social/share.html.twig' as social %}
 {% import '@macros/form-macros.html.twig' as form %}
 
 
@@ -10,12 +12,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 <script>{% include "@bootstrap/custom.js.twig" %}</script>
 
 <!-- Bootstrap core CSS -->
 <link href="http://lipis.github.io/bootstrap-social/assets/css/font-awesome.css" rel="stylesheet">
 <style>{% include "@bootstrap/bootstrap.min.css" %}</style>
-<!--<style>{% include "@bootstrap/custom.css.twig" %}</style>-->
 
 <!-- Bootstrap Flat UI -->
 <link href="http://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" rel="stylesheet">
@@ -24,32 +26,37 @@
 
 <div class="container" style="max-width:700px">
 
+    <h3>Social macros</h3>
 
     <div class="row-fluid">
-        <h3>Social login macros</h3>
-        <h4>Sign in</h4>
-        <div style="width:200px; padding:12px 0">
-            {{ login.twitter('Sign in Twitter') }}
-            {{ login.facebook('Sign in with Facebook') }}
-            {{ login.google('Sign in with Google') }}
-            {{ login.linkedin('Sign in with Linkedin') }}
+
+        <div class="col-sm-6">
+            <h4>Sign in</h4>
+            <div style="width:200px; padding:12px 0">
+                {{ login.twitter('Sign in Twitter', {"target": "popup"}) }}
+                {{ login.facebook('Sign in with Facebook', {"target": "popup"}) }}
+                {{ login.google('Sign in with Google', {"target": "popup"}) }}
+                {{ login.linkedin('Sign in with Linkedin', {"target": "popup"}) }}
+            </div>
         </div>
 
+        <div class="col-sm-6">
+            <h4>Share buttons</h4>
+            <div style="width:190px; padding:12px 0">
+                {% set social_data  = {'href': 'http://localhost:8000/'} %}
+                {% set twitter_social_data  = {'twitter' : 'niluspc', 'twitter_text' : 'News header'} %}
 
-
-        <h4>Simple buttons</h4>
-        <div style="width:190px; padding:12px 0">
-            {% set social_data  = {'href': 'http://localhost:8000/'} %}
-            {% set twitter_social_data  = {'twitter' : 'niluspc', 'twitter_text' : 'News header'} %}
-
-            {{ share.twitter(twitter_social_data|merge(social_data)) }}
-            {{ share.facebook(social_data) }}
-            {{ share.google(social_data) }}
-            {{ share.linkedin(social_data) }}
+                {{ social.twitter(twitter_social_data|merge(social_data)) }}
+                {{ social.facebook(social_data) }}
+                {{ share([social.google(social_data), social.linkedin(social_data), social.pinterest(social_data)]) }}
+            </div>
         </div>
-
 
     </div>
+</div>
+
+
+<div class="container" style="max-width:700px">
     <div class="row-fluid">
 
         <h3>News article macro</h3>
@@ -78,6 +85,27 @@
         #}
 
     </div>
+
+    <div class="row-fluid">
+        <h3>Image macros</h3>
+        {{
+            image.thumbnail({
+                "src": 'http://images.ara.cat/politica/Diversos-Penedes-Comissio-Vilafranca-ACN_ARAIMA20150904_0368_1.jpg',
+                "alt": "Diversos membres d'Òmnium Alt Penedès, l'ANC i la Comissió 11 de setembre de Vilafranca del Penedès",
+                "width" : "400px"
+            })
+        }}
+        <br>
+        {{
+            image.rounded({
+                "src": 'http://images.ara.cat/politica/Diversos-Penedes-Comissio-Vilafranca-ACN_ARAIMA20150904_0368_1.jpg',
+                "alt": "Diversos membres d'Òmnium Alt Penedès, l'ANC i la Comissió 11 de setembre de Vilafranca del Penedès",
+                "width" : "400px"
+            })
+        }}
+    </div>
+
+
     <div class="row-fluid">
 
         <form>
