--- a/theme/bootstrap3/components/social/share_button.css.twig
+++ b/theme/bootstrap3/components/social/share_button.css.twig
@@ -1,5 +1,8 @@
 .share-button-horizontal {
     position: absolute !important;
-    top: -9px !important;
+    top: -7px !important;
     background-color: transparent !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: none !important;
 }
