Adding paneled tabs with and without title FLAT UI

--- a/example/layout/example1.html.twig
+++ b/example/layout/example1.html.twig
@@ -25,6 +25,7 @@
 
 <!-- Bootstrap Flat UI -->
 <!--<link href="http://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" rel="stylesheet">-->
+<!--<style>{% include "@flatui/custom.css.twig" %}</style>-->
 
 <div class="container" style="max-width:700px">
 
@@ -80,7 +81,7 @@
 
 <div class="container" style="max-width:700px">
 
-    <h3>Panel Tabs</h3>
+    <h3>Paneled Tabs</h3>
 
 
     {{
@@ -92,7 +93,7 @@
                 "sinnoh1": "Sinnoh"
             },
             {
-                "kanto1" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li><li>Pikachu</li></ul>",
+                "kanto1" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
                 "johto1" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
                 "sinnoh1": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
             },
@@ -100,7 +101,7 @@
         )
     }}
 
-    <h3>Named Panel Tabs</h3>
+    <h3>Named Paneled Tabs</h3>
 
 
     {{
@@ -112,7 +113,7 @@
                 "sinnoh2": "Sinnoh"
             },
             {
-                "kanto2" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li><li>Pikachu</li></ul>",
+                "kanto2" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
                 "johto2" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
                 "sinnoh2": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
             },
