--- a/theme/bootstrap3_flat-ui/custom.css.twig
+++ b/theme/bootstrap3_flat-ui/custom.css.twig
@@ -1,2 +1,3 @@
 {% include '@flatui/components/social/social.css.twig' %}
 {% include '@flatui/components/social/share_button.css.twig' %}
+{% include '@flatui/components/tabs/paneled_tabs/paneled_tabs.css' %}
