--- a/example/layout/example1.html.twig
+++ b/example/layout/example1.html.twig
@@ -4,18 +4,29 @@
 
 {% from '@bootstrap/components/cards/vertical_card.html.twig' import news_vertical_card as news_article %}
 {% from '@bootstrap/components/social/share_button.html.twig' import share_button as share %}
+{% from '@bootstrap/components/maps/google/map.html.twig' import google_maps as google_maps %}
+
 {% import '@bootstrap/macros/media/image.html.twig' as image %}
 {% import '@bootstrap/components/social/login.html.twig' as login %}
 {% import '@bootstrap/components/social/share.html.twig' as social %}
 {% import '@macros/form-macros.html.twig' as form %}
 
-
+<html>
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+
+
+
+<script>
+    {%  include '@bootstrap/components/maps/google/themes/apple-maps-theme.js' %}
+    {%  include '@bootstrap/components/maps/google/jquery.google_maps.js' %}
+</script>
+
+
 <script>{% include "@bootstrap/custom.js.twig" %}</script>
 
 <!-- Bootstrap core CSS -->
@@ -26,109 +37,167 @@
 <!-- Bootstrap Flat UI -->
 <!--<link href="http://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" rel="stylesheet">-->
 <!--<style>{% include "@flatui/custom.css.twig" %}</style>-->
+</head>
+<body>
 
-<div class="container" style="max-width:700px">
+<div class="container">
+    <div class="row-fluid">
+        <h3>Styled Google Maps</h3>
 
-    <h3>Basic Tabs</h3>
-
-    {% set hoteles_tab %}
-    <div class="container" style="padding-top:12px">
-        <div class="row">
-            <div class="col-md-12"><p>Soy de Hoteles</p>
-            </div>
+        <div class="col-md-6" >
+            {{
+                google_maps(
+                    'barcelona',
+                    {
+                        "style":"width:100%; height:250px; border-radius: 8px; overflow: hidden",
+                        "data-zoom":"12",
+                        "data-lat":"41.3870154",
+                        "data-lon":"2.1700471",
+                        "data-marker" : true,
+                        "data-scroll-wheel": false,
+                        "data-navigation-control": false,
+                        "data-scale-control": false,
+                        "data-draggable": false,
+                        "data-map-type-control": false
+                    }
+                )
+            }}
+        </div>
+        <div class="col-md-6" >
+            {{
+                google_maps(
+                    'office',
+                    {
+                        "style":"width:100%; height:250px; border-radius: 8px; overflow: hidden",
+                        "data-zoom":"17",
+                        "data-lat":"41.395086",
+                        "data-lon":"2.1502881",
+                        "data-marker" : true,
+                        "data-scroll-wheel": false,
+                        "data-navigation-control": false,
+                        "data-scale-control": false,
+                        "data-draggable": false,
+                        "data-map-type-control": false
+                    }
+                )
+            }}
         </div>
     </div>
-    {% endset %}
+</div>
 
-    {% set vuelos_tab %}
-    <div class="container" style="padding-top:12px">
-        <div class="row">
-            <div class="col-md-12"><p>Soy de Vuelos</p>
+
+<div class="container">
+    <div class="row-fluid">
+        <div class="col-md-12">
+        <h3>Basic Tabs</h3>
+
+        {% set hoteles_tab %}
+        <div class="container" style="padding-top:12px">
+            <div class="row">
+                <div class="col-md-12"><p>Soy de Hoteles</p>
+                </div>
             </div>
         </div>
-    </div>
-    {% endset %}
+        {% endset %}
 
-    {% set viajes_tab %}
-    <div class="container" style="padding-top:12px">
-        <div class="row">
-            <div class="col-md-12"><p>Soy de Viajes</p>
+        {% set vuelos_tab %}
+        <div class="container" style="padding-top:12px">
+            <div class="row">
+                <div class="col-md-12"><p>Soy de Vuelos</p>
+                </div>
             </div>
         </div>
-    </div>
-    {% endset %}
+        {% endset %}
 
-    {{
-        flat_tabs
-        (
-            {
-                "vuelos" : "Vuelos",
-                "hoteles" : "Hoteles",
-                "viajes": "<span class='fa fa-github'></span> Viajes"
-            },
-            {
-                "vuelos" : vuelos_tab,
-                "hoteles" : hoteles_tab,
-                "viajes": viajes_tab
-            },
-            "viajes"
-        )
-    }}
+        {% set viajes_tab %}
+        <div class="container" style="padding-top:12px">
+            <div class="row">
+                <div class="col-md-12"><p>Soy de Viajes</p>
+                </div>
+            </div>
+        </div>
+        {% endset %}
+
+        {{
+            flat_tabs
+            (
+                {
+                    "vuelos" : "Vuelos",
+                    "hoteles" : "Hoteles",
+                    "viajes": "<span class='fa fa-github'></span> Viajes"
+                },
+                {
+                    "vuelos" : vuelos_tab,
+                    "hoteles" : hoteles_tab,
+                    "viajes": viajes_tab
+                },
+                "viajes"
+            )
+        }}
+     </div>
+    </div>
 </div>
 
 
 
 
-<div class="container" style="max-width:700px">
+<div class="container">
+    <div class="row-fluid">
+        <div class="col-md-12">
+        <h3>Paneled Tabs</h3>
 
-    <h3>Paneled Tabs</h3>
 
-
-    {{
-        paneled_tabs
-        (
-            {
-                "kanto1" : "Kanto",
-                "johto1" : "Johto",
-                "sinnoh1": "Sinnoh"
-            },
-            {
-                "kanto1" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
-                "johto1" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
-                "sinnoh1": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
-            },
-            "kanto1"
-        )
+        {{
+            paneled_tabs
+            (
+                {
+                    "kanto1" : "Kanto",
+                    "johto1" : "Johto",
+                    "sinnoh1": "Sinnoh"
+                },
+                {
+                    "kanto1" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
+                    "johto1" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
+                    "sinnoh1": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
+                },
+                "kanto1"
+            )
     }}
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="col-md-12">
+        <h3>Named Paneled Tabs</h3>
 
-    <h3>Named Paneled Tabs</h3>
 
-
-    {{
-        paneled_tabs
-        (
-            {
-                "kanto2" : "Kanto",
-                "johto2" : "Johto",
-                "sinnoh2": "Sinnoh"
-            },
-            {
-                "kanto2" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
-                "johto2" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
-                "sinnoh2": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
-            },
-            "johto2",
-            "Starter Pokémon"
-        )
-    }}
+        {{
+            paneled_tabs
+            (
+                {
+                    "kanto2" : "Kanto",
+                    "johto2" : "Johto",
+                    "sinnoh2": "Sinnoh"
+                },
+                {
+                    "kanto2" : "<ul><li>Bulbasaur</li><li>Charmander</li><li>Squirtle</li></ul>",
+                    "johto2" : "<ul><li>Chikorita</li><li>Cyndaquil</li><li>Totodile</li></ul>",
+                    "sinnoh2": "<ul><li>Treecko</li><li>Torchic</li><li>Mudkip</li></ul>"
+                },
+                "johto2",
+                "Starter Pokémon"
+            )
+        }}
+        </div>
+    </div>
 </div>
 
 
 
 
+<hr>
 
 
-<div class="container" style="max-width:700px">
+<div class="container">
 
     <h3>Social macros</h3>
 
@@ -159,8 +228,10 @@
     </div>
 </div>
 
+<hr>
 
-<div class="container" style="max-width:700px">
+
+<div class="container">
     <div class="row-fluid">
 
         <h3>News article macro</h3>
@@ -189,7 +260,12 @@
         #}
 
     </div>
+</div>
 
+
+<hr>
+
+<div class="container">
     <div class="row-fluid">
         <h3>Image macros</h3>
         {{
@@ -209,7 +285,11 @@
         }}
     </div>
 
+</div>
 
+<hr>
+
+<div class="container">
     <div class="row-fluid">
 
         <form>
@@ -226,8 +306,17 @@
 
 
             <br>{{ form.textarea('test', 'content', {"style" : "border-color:red"}) }}
+            <br>{{ form.checkbox('like_pizza') }} {{ form.label('like_pizza', 'Do you like pizza?') }}
+
+            <br>{{ form.radio('confirmation', {"id":"confirmation_yes"}) }} {{ form.label('confirmation_yes', 'Yes') }}
+            <br>{{ form.radio('confirmation', {"id":"confirmation_no"}) }} {{ form.label('confirmation_no', 'No') }}
+
             <br>{{ form.submit('Submit button', { "class" : "btn btn-success"})}}
         </form>
 
     </div>
 </div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&sensor=true"></script>
+</body>
+</html>
