--- a/theme/bootstrap3/components/social/social.css.twig
+++ b/theme/bootstrap3/components/social/social.css.twig
@@ -684,3 +684,30 @@
     color: #720e9e;
     background-color: #fff
 }
+
+
+
+.btn-whatsapp
+{
+color: #fff;
+background-color: #67bc34;
+}
+.btn-whatsapp:hover, .btn-whatsapp:focus, .btn-whatsapp:active, .btn-whatsapp.active, .open > .dropdown-toggle.btn-whatsapp {
+color: #fff;
+background-color: #418A16;
+/*border-color: rgba(0, 0, 0, 0.2)*/
+}
+
+.btn-whatsapp:active, .btn-whatsapp.active, .open > .dropdown-toggle.btn-whatsapp {
+background-image: none
+}
+
+.btn-whatsapp.disabled, .btn-whatsapp[disabled], fieldset[disabled] .btn-whatsapp, .btn-whatsapp.disabled:hover, .btn-whatsapp[disabled]:hover, fieldset[disabled] .btn-whatsapp:hover, .btn-whatsapp.disabled:focus, .btn-whatsapp[disabled]:focus, fieldset[disabled] .btn-whatsapp:focus, .btn-whatsapp.disabled:active, .btn-whatsapp[disabled]:active, fieldset[disabled] .btn-whatsapp:active, .btn-whatsapp.disabled.active, .btn-whatsapp[disabled].active, fieldset[disabled] .btn-whatsapp.active {
+background-color: #418A16;
+/*border-color: rgba(0, 0, 0, 0.2)*/
+}
+
+.btn-whatsapp .badge {
+color: #418A16;
+background-color: #fff
+}
