--- a/theme/bootstrap3/custom.css.twig
+++ b/theme/bootstrap3/custom.css.twig
@@ -1,3 +1,6 @@
+label{
+    cursor: pointer;
+}
 {% include '@bootstrap/components/social/social.css.twig' %}
 {% include '@bootstrap/components/social/share_button.css.twig' %}
 {% include '@bootstrap/components/tabs/paneled_tabs/paneled_tabs.css' %}
