Working on post

--- a/example/layout/index.html.twig
+++ b/example/layout/index.html.twig
@@ -1,24 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Building blocks</h1>
 
-    <hr>
-    
     <h4 style="color:grey">Using Bootstrap 3</h4>
-    <h6 class="text-muted">Components:</h6>
+    <h5 class="text-muted"><strong>Components</strong></h5>
     <ul>
         <li><a href="?page=tabs">Tabs</a></li>
         <li><a href="?page=share">Share buttons</a></li>
 
         <li><a href="?page=images">Images</a></li>
     </ul>
-    <h6 class="text-muted">Pages:</h6>
+    <h5 class="text-muted"><strong>Pages</strong></h5>
+    <ul>
+        <li>
+            <h5 class="text-muted">Blog</h5>
+            <ul>
+                <li><a href="?page=blog-post-lifehack">Lifehack.org Post</a></li>
+            </ul>
+        </li>
+    </ul>
 
     <hr>
 
     <h4 style="color:grey">Framework-less</h4>
-    <h6 class="text-muted">Components:</h6>
+    <h5 class="text-muted"><strong>Components</strong></h5>
     <ul>
         <li><a href="?page=maps">Maps</a></li>
     </ul>
