Adding post aside bar

--- a/example/layout/index.html.twig
+++ b/example/layout/index.html.twig
@@ -16,6 +16,12 @@
             <h5 class="text-muted">Blog</h5>
             <ul>
                 <li><a href="?page=blog-post-lifehack">Lifehack.org Post</a></li>
+                <li><a class="text-muted" href="?page=blog-category-lifehack">Lifehack.org Category</a></li>
+                <li><a class="text-muted" href="?page=blog-post-entrepreneur">Entrepreneur.com Post</a></li>
+                <li><a class="text-muted" href="?page=blog-category-entrepreneur">Entrepreneur.com Category</a></li>
+
+                <li><a class="text-muted" href="?page=blog-post-medium">Medium.com Post</a></li>
+                <li><a class="text-muted" href="?page=blog-category-medium">Medium.com Category</a></li>
             </ul>
         </li>
     </ul>
