--- a/example/layout/pages/blog/post/blog-post-lifehack.html.twig
+++ b/example/layout/pages/blog/post/blog-post-lifehack.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
-
+{% block css %}
+<style>
+    {%  include '@bootstrap/pages/blog/post/lifehack_org/style.css' %}
+</style>
+{% endblock %}
 
 {% block body %}
 
