--- a/theme/bootstrap3/custom.css.twig
+++ b/theme/bootstrap3/custom.css.twig
@@ -1,6 +1,11 @@
 label{
     cursor: pointer;
 }
+
+.container{
+    padding-right:0;
+    padding-left:0;
+}
 {% include '@bootstrap/components/social/social.css.twig' %}
 {% include '@bootstrap/components/social/share_button.css.twig' %}
 {% include '@bootstrap/components/tabs/paneled_tabs/paneled_tabs.css' %}
