--- a/theme/bootstrap3/pages/blog/post/lifehack_org/post.html.twig
+++ b/theme/bootstrap3/pages/blog/post/lifehack_org/post.html.twig
@@ -1,17 +1,18 @@
 <div class="row-fluid">
-    <div class="col-sm-8  col-lg-9">
-        <img style="width:100%" src="http://cdn-media-2.lifehack.org/wp-content/files/2015/06/8785445626_587fdac14d_b.jpg">
-
+    <div class="col-sm-8">
+        <div style="width:100%; position: relative; overflow: hidden">
+            <img style="width:100%" src="http://cdn-media-2.lifehack.org/wp-content/files/2015/06/8785445626_587fdac14d_b.jpg">
+        </div>
 
         <div class="row-fluid">
             <div class="nav hidden-xs hidden-sm col-md-3 col-lg-2">
 
                     {% import '@bootstrap/components/social/login.html.twig' as login %}
-                    <div style="padding-top:32px">
-                        {{ login.twitter('Tweet', {"target": "popup"}) }}
-                        {{ login.facebook('Comparte', {"target": "popup"}) }}
-                        {{ login.google('Comparte', {"target": "popup"}) }}
-                        {{ login.linkedin('Comparte', {"target": "popup"}) }}
+                    <div style="padding-top:32px; ">
+                        {{ login.twitter('Tweet', {"target": "popup", "style" : "text-align: center"}) }}
+                        {{ login.facebook('Share', {"target": "popup", "style" : "text-align: center"}) }}
+                        {{ login.google('Share', {"target": "popup", "style" : "text-align: center"}) }}
+                        {{ login.linkedin('Share', {"target": "popup", "style" : "text-align: center"}) }}
                     </div>
             </div>
 
@@ -27,7 +28,41 @@
         </div>
     </div>
 
-    <div class="col-md-4 col-lg-3">
-        aaa
+    <div class="col-sm-4">
+        <h4>You may also like</h4>
+
+        <ul class="media-list main-list">
+            <li class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object" src="http://cdn-media-2.lifehack.org/wp-content/files/2015/03/10-Reasons-Why-People-Who-Read-A-Lot-Are-More-Likely-To-Be-Successful-170x170.jpg" alt="...">
+                </a>
+                <div class="media-body">
+                    <h5 class="media-heading">
+                        <a href="">10 Reasons Why People Who Read A Lot Are More Likely To Be Successful</a>
+                    </h5>
+                </div>
+            </li>
+            <li class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object" src="http://cdn-media-2.lifehack.org/wp-content/files/2015/03/10-Reasons-Why-People-Who-Read-A-Lot-Are-More-Likely-To-Be-Successful-170x170.jpg" alt="...">
+                </a>
+                <div class="media-body">
+                    <h5 class="media-heading">
+                        <a href="">10 Reasons Why People Who Read A Lot Are More Likely To Be Successful</a>
+                    </h5>
+                </div>
+            </li>
+            <li class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object" src="http://cdn-media-2.lifehack.org/wp-content/files/2015/03/10-Reasons-Why-People-Who-Read-A-Lot-Are-More-Likely-To-Be-Successful-170x170.jpg" alt="...">
+                </a>
+                <div class="media-body">
+                    <h5 class="media-heading">
+                        <a href="">10 Reasons Why People Who Read A Lot Are More Likely To Be Successful</a>
+                    </h5>
+                </div>
+            </li>
+        </ul>
+
     </div>
 </div>
